front-proxy-s3/kubernetes/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: example
  labels:
    app: example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
    spec:
      containers:
        - name: envoy
          image: envoyproxy/envoy:v1.21-latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - readOnly: true
              mountPath: /config
              name: proxy-config
          args:
            - "-c"
            - "/config/front-envoy.yaml"
            - "--service-cluster"
            - "example-proxy"
      volumes:
        - name: proxy-config
          configMap:
            name: proxy-config
