front-proxy-s3/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-svc
spec:
  selector:
    app: example
  ports:
    - port: 8080
      protocol: TCP
